<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
<TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/configuration_title"
	style="?android:listSeparatorTextViewStyle"
	/>
<ScrollView
	android:layout_width="wrap_content"
	android:layout_height="0dip"
	android:layout_weight="1"
	>
<LinearLayout
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
<CheckBox android:id="@+id/enable"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/enable"
	android:checked="true"
	/>
<Spinner android:id="@+id/interval"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:prompt="@string/interval"
	/>
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/interval_battery_warning"
	/>
<TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/account"
	style="?android:listSeparatorTextViewStyle"
	android:layout_marginTop="15sp"
	/>
<TextView android:id="@+id/username"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	/>
<Button android:id="@+id/sign_in"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/sign_in"
	/>
<TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/options"
	style="?android:listSeparatorTextViewStyle"
	android:layout_marginTop="14sp"
	/>
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/also_check"
	/>
<LinearLayout
	android:orientation="horizontal"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	>
<CheckBox android:id="@+id/messages"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/messages"
	android:checked="true"
	/>
<CheckBox android:id="@+id/replies"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/replies"
	android:checked="true"
	/>
</LinearLayout>
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/notification_options"
	/>
<LinearLayout
	android:orientation="horizontal"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	>
<CheckBox android:id="@+id/sound"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/sound"
	android:checked="false"
	/>
<CheckBox android:id="@+id/vibrate"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/vibrate"
	android:checked="false"
	/>
<CheckBox android:id="@+id/lights"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/lights"
	android:checked="false"
	/>
</LinearLayout>
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/filter_label"
	/>
<Spinner android:id="@+id/filter_type"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:prompt="@string/filter_label"
	android:entries="@array/filter_types"
	/>
<LinearLayout android:id="@+id/filter_needed"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:visibility="gone"
	>
<TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/filter_instructions"
	/>
<EditText android:id="@+id/filter"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:singleLine="true"
	/>
</LinearLayout>
<TextView android:id="@+id/follow_link"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingTop="4sp"
	android:paddingBottom="4sp"
	android:text="@string/follow_link"
	style="@style/webLink"
	/>
</LinearLayout>
</ScrollView>
<LinearLayout android:id="@+id/settings_changed"
	android:orientation="horizontal"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:visibility="gone"
	>
<Button android:id="@+id/save"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/save_settings"
	/>
<Button android:id="@+id/revert"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/reset_settings"
	/>
</LinearLayout>
</LinearLayout>
